# ledger-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DISCOVER.md  Makefile  README.md  STRUCTURE.md  _trading_report.py  config.py  main.py  pyproject.toml  redaction.allowlist  requirements-dev.txt  requirements.txt  run.bat  run.sh
.github/scripts/: compute_semver.py  sha256sums.sh
.github/workflows/: doc-redaction.yml  redaction-scan.yml  release.yml  repro-check.yml
accounting/: balance_sheet.py  tax_estimator.py
adapters/: __init__.py  context_builder.py
cli/: __init__.py  commands.py  onboarding.py  prompts.py  quick_scan.py
config/: redaction_corpus.yaml
core/: __init__.py  audit.py  cleanup.py  database.py  exceptions.py  logging_setup.py  models.py  privacy.py
docs/: history-audit.md  history-remediation-procedure.md  parity-divergence.md  redaction-policy.md  release.md  runner.md
hooks/: pre-commit
intelligence/: __init__.py  classifier.py  memory.py  reconciler.py
intelligence/ai_backend/: __init__.py  chained_backend.py  gemini_backend.py  local_backend.py  openai_backend.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml.template  service.yaml
ledger_agent/: __init__.py
ledger_agent/bridge/: __init__.py  jsonrpc_stdio.py
ledger_agent/cli/: __init__.py  commands.py  main.py  onboarding.py  quick_scan.py
ledger_agent/core/: __init__.py  api.py  audit.py  cleanup.py  config.py  database.py  exceptions.py  logging_setup.py  models.py  privacy.py  privacy_allowlist.txt
ledger_agent/core/accounting/: __init__.py  balance_sheet.py  continuity.py  tax_estimator.py
ledger_agent/core/intelligence/: classifier.py  memory.py  reconciler.py
ledger_agent/core/intelligence/ai_backend/: __init__.py  base.py  chained_backend.py  gemini_backend.py  local_backend.py  openai_backend.py
ledger_agent/core/parsers/: __init__.py  bank_x2_checking.py  bank_x3_checking.py  bank_x4_checking.py  bank_x4_creditcard.py  bank_x_checking.py  base.py  bofa_checking.py  broker_y_brokerage.py  broker_z.py  fidelity_brokerage.py  ibkr.py  registry.py  usbank_checking.py
ledger_agent/core/reports/: renderer.py
ledger_agent/mcp/: __init__.py  __main__.py  manifest.json  server.py  tools.py  transport_http.py  transport_stdio.py
mcp_server/: __init__.py  server.py
packaging/cli/: pyproject.toml
packaging/core/: README.md  pyproject.toml
packaging/mcp/: pyproject.toml
parsers/: __init__.py  base.py  bofa_checking.py  chase_checking.py  fidelity_brokerage.py  ibkr.py  registry.py  truist_checking.py  usbank_checking.py  usbank_creditcard.py
reports/: __init__.py  renderer.py
scripts/: check_doc_redaction.py  regen_parity_corpus.py  run_with_browser.py
tests/: conftest.py  test_balance_sheet.py  test_bridge.py  test_classifier.py  test_cleanup.py  test_doc_redaction.py  test_mcp_server.py  test_models.py  test_onboarding.py  test_parsers.py  test_privacy.py  test_tax_estimator.py
tests/architecture/: test_core_purity.py
tests/fixtures/: bank_x2_sample.example.txt  bank_x3_sample.example.txt  bank_x4_checking_sample.example.txt  bank_x4_creditcard_sample.example.txt  bank_x_sample.example.txt  broker_y_sample.example.txt  broker_z_sample.example.txt
tests/integration/: conftest.py  test_2024_cpa_parity.py  test_aggregation_no_silent_drop.py  test_classification_persisted.py  test_mcp_privacy.py
tests/integration/fixtures/: 2024_cpa_expected.json
tests/integration/fixtures/brokerage/broker_y/: expected.json
tests/integration/fixtures/brokerage/broker_z/: expected.json
tests/integration/fixtures/brokerage/fidelity/: expected.json
tests/integration/fixtures/brokerage/ibkr/: expected.json
tests/integration/parsers/: test_brokerage_completeness.py  test_position_completeness.py
tests/unit/: test_continuity.py  test_k1_allocation.py
webapp/: pom.xml
webapp/src/main/java/com/ledgeragent/: LedgerAgentApplication.java
webapp/src/main/java/com/ledgeragent/api/: ApiController.java  RunRequest.java
webapp/src/main/java/com/ledgeragent/bridge/: BridgeException.java  JsonRpcClient.java  PythonBridge.java
webapp/src/main/java/com/ledgeragent/runtime/: PythonRuntimeExtractor.java
webapp/src/main/java/com/ledgeragent/service/: ReportType.java  RunService.java
webapp/src/main/java/com/ledgeragent/web/: RunController.java
webapp/src/main/resources/: application.yml
webapp/src/main/resources/templates/: index.html  results.html
webapp/src/test/java/com/ledgeragent/api/: ApiControllerIT.java
webapp/src/test/java/com/ledgeragent/bridge/: PythonBridgeIT.java
