[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ledger-agent"
version = "2.1.0"
description = "Four-form financial intelligence platform for SYNCED LLC — core library, CLI, MCP server, and Spring Boot webapp sharing one engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "accounting", "balance-sheet", "pdf-parser", "small-business"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20221105",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.6.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.30.0",
    "tenacity>=8.3.0",
]
gemini = [
    "google-generativeai>=0.7.0",
    "tenacity>=8.3.0",
]
ai = [
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "tenacity>=8.3.0",
]
dotenv = [
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "python-dotenv>=1.0.0",
]
all = [
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
fi = "main:main"
ledger = "ledger_agent.cli.main:app"
ledger-agent-mcp = "ledger_agent.mcp.server:main"

[project.urls]
Homepage = "https://github.com/your-org/ledger-agent"
Documentation = "https://github.com/your-org/ledger-agent#readme"
Issues = "https://github.com/your-org/ledger-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
markers = [
    "parity: CPA parity tests — compare computed numbers to CPA reference (ARCH-12)",
    "integration: integration tests requiring live services or a populated database",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
